Prevent main site name from line wrapping

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -40,6 +40,7 @@ a {
   align-items: center;
   gap: 1rem;
   font-weight: normal;
+  white-space: nowrap;
 }
 
 #header {
